[package]
name = "git-brancher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = {version = "1.0.152", features = ["derive"]}
reqwest = "0.11.13"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
urlencoding = "2.1.2"
base64 = "0.10.1"
regex = "1"
toml = "0.5.11"
home = "0.5.4"
